workshops/ambient-debugging/data/client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  namespace: client
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: client
  labels:
    app: client
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      serviceAccountName: client
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - server
            topologyKey: kubernetes.io/hostname
      containers:
      - name: client
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
