workshops/ambient-debugging/data/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: server
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: server
  labels:
    app: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
        app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      serviceAccountName: server
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - client
            topologyKey: kubernetes.io/hostname
      containers:
      - name: server
        image: ghcr.io/nmnellis/fake-service:v2
        ports:
        - containerPort: 8080
        securityContext:
          runAsUser: 1001
        resources:
          requests:
            memory: "100Mi"
            cpu: "10m"
---
