workshops/ambient-debugging/data/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-to-server
  namespace: server
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
    - Ingress
